# stitch

./: .gitignore  .travis.yml  README.md  package.yaml  stack-lts-3.22  stack.yaml  stitch.cabal
.circleci/: config.yml
bench/: Main.hs
src/: Stitch.hs
src/Control/Monad/: Stitch.hs
src/Control/Monad/Trans/: Stitch.hs
src/Stitch/: Combinators.hs  Example.hs  Render.hs  Types.hs
src/Stitch/Types/: Selector.hs
test/: StitchSpec.hs
test/Stitch/Types/: SelectorSpec.hs
test/css/: ampersand_after.css  basic_ampersand.css  basic_import.css  basic_nested_props.css  basic_prefix.css  multiple_ampersands.css  multiple_props.css  multiple_selectors.css  nested_prefixes.css  prefixed_ampersands.css
