name:                stitch
version:             0.1.0.0
synopsis:            lightweight CSS DSL
description:         a tiny css preprocessor dsl for haskell – check out the readme at <https://github.com/intolerable/stitch>
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
copyright:           © Fraser Murray 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/intolerable/stitch.git

library
  exposed-modules:
    Control.Monad.Stitch
    Control.Monad.Trans.Stitch
    Stitch
    Stitch.Combinators
    Stitch.Example
    Stitch.Render
    Stitch.Types
  other-modules:
    Stitch.Types.Selector
  build-depends:
    base >=4.7 && <4.8,
    containers,
    mtl,
    text,
    transformers
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
  default-extensions:
    GeneralizedNewtypeDeriving
    OverloadedStrings
