name:                stitch
version:             0.4.0.0
synopsis:            lightweight CSS DSL
description:         a tiny css preprocessor dsl for haskell – check out the readme at <https://github.com/intolerable/stitch>
license:             BSD3
license-file:        LICENSE
author:              Fraser Murray
maintainer:          fraser.m.murray@gmail.com
copyright:           © Fraser Murray 2015
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  test/css/*.css

source-repository head
  type: git
  location: git://github.com/intolerable/stitch.git

library
  exposed-modules:
    Control.Monad.Stitch
    Control.Monad.Trans.Stitch
    Stitch
    Stitch.Combinators
    Stitch.Example
    Stitch.Render
    Stitch.Types
    Stitch.Types.Selector
  build-depends:
    base >= 4.6 && < 4.10,
    containers,
    text,
    transformers
  hs-source-dirs:      src
  ghc-options: -Wall
  default-language:    Haskell2010
  default-extensions:
    GeneralizedNewtypeDeriving
    OverloadedStrings

test-suite test
  hs-source-dirs: test
  main-is: Spec.hs
  default-extensions: OverloadedStrings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    Cabal >= 1.16.0,
    stitch,
    hspec,
    text
  ghc-options: -Wall

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  default-extensions: OverloadedStrings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  build-depends:
    base == 4.*,
    stitch,
    criterion
  ghc-options: -Wall
